syntax = "proto3";

package api_struct;

message GetUsersRequest {
  repeated string uid = 1;
}

message GetUsersResponse {
  message UserData {
    string uid = 1;
    string login = 2;
    string avatar = 3;
  }
  repeated UserData data = 1;
}

service API {
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
}


